# metamorph

./: .gitignore  README.md  metamorph_environment.yml  pyproject.toml
inference/: DEMO.md  adapter.py  demo.py  load_metamorph.py  load_visualization.py
launch_scripts/: train_mix.sh
metamorph/: __init__.py  constants.py  conversation.py  mm_utils.py  utils.py
metamorph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metamorph/model/: __init__.py  builder.py  consolidate.py  metamorph_arch.py
metamorph/model/language_model/: metamorph_llama.py
metamorph/model/multimodal_encoder/: builder.py  siglip_encoder.py
metamorph/model/multimodal_projector/: builder.py
metamorph/train/: llama_flash_attn_monkey_patch.py  metamorph_trainer.py  train.py  train_mem.py
scripts/: Train.md  debug_finetune_1node.sh  debug_pretrain_1node.sh  finetune_1node.sh  pretrain_1node.sh  slurm_finetune.sh  slurm_pretrain.sh  zero2.json  zero3.json
visualization/: Train_Visualization.md  submit.sh  train.py
