[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metamorph"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.2.0", "torchvision==0.17.0",
    "transformers==4.45.0", "deepspeed==0.15.1", "tokenizers==0.20.3", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.34.2", "decord==0.6.0", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.19.2", "gradio_client==0.10.1",
    "requests", "httpx==0.28.1", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==1.0.7", "webdataset==0.2.86", "diffusers", "protobuf<4", "wandb"
]

[project.optional-dependencies]
train = ["ninja"]
build = ["build", "twine"]


[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
